--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,9 @@ h1 {
 
 h2 {
   font-size: 2.5rem;
-  font-weight: normal;
+  font-weight: bold;
   color: #66BFBF;
+  font-weight: bold;
   margin-top : 0;
   font-family: 'Montserrat', sans-serif;
 }
@@ -22,6 +23,7 @@ h2 {
 h3 {
   margin-top : 0;
   color: #11999E;
+  font-weight: bold;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -33,6 +35,22 @@ div {
     margin : 0;
   }
 
+p {
+  color: #40514E;
+  font-weight: bold;
+}
+
+
+hr {
+ color: #EAF6F6;
+ border-top: 7px;
+ border-bottom: 0;
+ border-style: dotted;
+ width : 5%;
+ margin-top: 50px;
+ margin-bottom: 50px;
+ }
+
 
 .top {
   background-color: #E4F9F5;
@@ -42,9 +60,13 @@ div {
 
 .middle-container {
   margin-top: 50px;
+  margin-bottom: 50px;
   }
 
 .bottom-container {
+  background-color: #66BFBF;
+  padding-top: 50px;
+  padding-bottom: 50px;
   }
 
 
@@ -64,7 +86,7 @@ div {
 
 .skill-row {
   width: 50%;
-  margin: 100px auto 100px auto;
+  margin: 50px auto 50px auto;
   text-align: left;
   line-height: 2;
 }
@@ -83,5 +105,60 @@ div {
 .coding-img {
   width: 20%;
   float: right;
-  margin-right: 30px;
+  margin-right: 100px;
+}
+
+
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 24px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+.get-touch {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  line-height: 2;
+}
+
+.right {
+  color : #EAF6F6;
+}
+
+.footer-link_link {
+  font-size: 20px;
+  color : #11999E;
+}
+
+.footer-link_twit {
+  font-size: 20px;
+  color : #11999E;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.footer-link_web {
+  font-size: 20px;
+  color : #11999E;
 }
