--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,18 @@ h3 {
 
 a {
   color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
   }
+
+
+  a:hover {
+    color: #EAF6F6;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: underline;
+    }
+
+
 
 div {
     margin : 0;
@@ -119,7 +130,7 @@ hr {
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family: Arial;
+  font-family: 'Montserrat', sans-serif;
   color: #ffffff;
   font-size: 24px;
   padding: 10px 20px 10px 20px;
@@ -144,6 +155,7 @@ hr {
 
 .right {
   color : #EAF6F6;
+  margin-top: 40px;
 }
 
 .footer-link_link {
